testsuite/tests/generic_interfaces/duplicate_method_implements/test.out
== foo.lkt ==
foo.lkt:15:1: error: Interface.method is implementend by multiple properties in class BarNode: BarNode.prop1, BarNode.prop2
15 | class BarNode: FooNode implements Interface {
   | ^


lkt_compile: Done
